<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout android:id="@+id/ownerTextInputLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">

                    <android.support.design.widget.TextInputEditText android:id="@+id/ownerEditText"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/owner_hint"
                        android:inputType="text"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout android:id="@+id/repositoryTextInputLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ownerTextInputLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">

                    <android.support.design.widget.TextInputEditText android:id="@+id/repositoryEditText"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/repository_hint"
                        android:inputType="text"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>

                <Button android:id="@+id/searchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/repositoryTextInputLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="16dp"
                    android:enabled="false"
                    android:text="@string/searchButton" />
            </RelativeLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar android:id="@+id/nextProgressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            tools:visibility="visible" />

        <ProgressBar android:id="@+id/loadingProgressBar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp"
            android:visibility="invisible" />

        <TextView android:id="@+id/errorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textSize="24sp"
            android:visibility="invisible" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView android:id="@+id/stargazersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</android.support.design.widget.CoordinatorLayout>